<resources>
    <string name="app_name">Trab 03</string>
    <string name="tarefa">Tarefa:</string>
    <string name="descri_o">Descrição</string>
    <string name="estado">Estado</string>
    <string name="data_hora_limite">Data Hora Limite</string>
    <string name="deletar">Deletar</string>
    <string name="dificuldade">Dificuldade</string>
    <string name="data_hora_atual">Data Hora Atual</string>
    <string name="editar">Editar</string>
</resources>
