<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TarefasActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tarefa"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="normal"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDecricao"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/descri_o"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#D8020000"
        android:textSize="14sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <TextView
        android:id="@+id/txtDificuldade"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/dificuldade"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#D8020000"
        android:textSize="14sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toStartOf="@+id/txtEstado"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDecricao" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/estado"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#D8020000"
        android:textSize="14sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDecricao" />

    <TextView
        android:id="@+id/txtDTAtual"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/data_hora_atual"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#D8020000"
        android:textSize="14sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toStartOf="@+id/txtDTLimite"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDificuldade" />

    <TextView
        android:id="@+id/txtDTLimite"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/data_hora_limite"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#D8020000"
        android:textSize="14sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEstado" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="152dp"
        android:text="@string/editar"
        android:textColor="#D8020000"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDTAtual" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/deletar"
        android:textColor="#D8020000"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toEndOf="@+id/btnEdit"
        app:layout_constraintTop_toBottomOf="@+id/txtDTLimite" />
</android.support.constraint.ConstraintLayout>